--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
+    "bootstrap": "^5.3.3",
+    "framer-motion": "^11.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.24.1"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.25.0",
+    "react-scripts": "^5.0.1",
+    "reactstrap": "^9.2.2",
+    "remixicon": "^4.3.0",
+    "web-vitals": "^4.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
